--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "electron": "^26.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dictionary-en": "^4.0.0",
+    "nspell": "^2.1.5"
+  }
 }
