--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-spellchecker",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "A simple Electron app for spell checking words",
   "main": "main.js",
   "scripts": {
@@ -61,21 +61,22 @@
     },
     "dmg": {
       "title": "Spellcheck",
-      "backgroundColor": "#ffffff",
+      "background": "assets/dmg-background.png",
+      "iconSize": 64,
       "window": {
-        "width": 540,
-        "height": 380
+        "width": 600,
+        "height": 400
       },
       "contents": [
         {
-          "x": 410,
-          "y": 150,
+          "x": 480,
+          "y": 190,
           "type": "link",
           "path": "/Applications"
         },
         {
-          "x": 130,
-          "y": 150,
+          "x": 100,
+          "y": 190,
           "type": "file"
         }
       ]
